--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "jquery": "~1.11.1",
-    "handlebars": "~1.3.0"
+    "handlebars": "~1.3.0",
+    "loader.js": "~1.0.0"
   }
 }
