--- a/bower.json
+++ b/bower.json
@@ -8,5 +8,9 @@
     "jquery": "~1.11.1",
     "handlebars": "~1.3.0",
     "loader.js": "~1.0.0"
-  }
+  },
+  "ignore": [
+    "dist/ember-inflector.jshint.js",
+    "dist/tests.js"
+  ]
 }
