--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,5 @@
-rvm:
-  - 1.9.3
-  - 2.0.0
-bundler_args: --without development
 before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - "rake clean"
-script: "rake test[all]"
-notifications:
-  webhooks: http://emberjs-master-builds.herokuapp.com/upload/ember.js
+  - npm install -g bower grunt-cli
+  - bower install
+  - npm install
+script: "grunt"
