--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
     "broccoli-transform": "^0.1.1",
     "broccoli-uglify-js": "^0.1.3",
     "broccoli-wrap": "0.0.2",
-    "grunt": "^0.4.5",
-    "grunt-broccoli": "^0.3.3",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-connect": "^0.8.0",
-    "grunt-contrib-qunit": "^0.5.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "matchdep": "^0.3.0"
+    "matchdep": "^0.3.0",
+    "testem": "^0.6.17"
+  },
+  "scripts": {
+    "start": "broccoli serve",
+    "test": "testem ci"
   }
 }
