--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-before_script:
-  - npm install -g bower broccoli-cli testem
-  - bower install
-  - npm install
-  - broccoli build dist
-script: "npm test"
+language: node_js
+sudo: false
+script: "npm run bower && npm run build && npm run test"
