--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ember-inflector",
   "version": "1.0.0pre",
   "devDependencies": {
+    "bower": "^1.3.8",
     "broccoli": "^0.12.3",
     "broccoli-concat": "0.0.7",
     "broccoli-env": "0.0.1",
@@ -20,7 +21,9 @@
     "testem": "^0.6.17"
   },
   "scripts": {
-    "start": "broccoli serve",
+    "start": "ember s",
+    "bower": "bower install",
+    "build": "ember build",
     "test": "testem ci"
   }
 }
