--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-inflector",
-  "version": "1.0.0pre",
+  "version": "1.0.0",
   "dependencies": {
     "ember": ">= 1.0.0 < 2.0.0"
   },
