--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-inflector",
-  "version": "1.0.0pre",
+  "version": "1.0.0",
   "devDependencies": {
     "bower": "^1.3.8",
     "broccoli": "^0.12.3",
