add handlebars helpers for singularize and pluralize
fixes GH-18

--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "start": "ember s",
     "bower": "bower install",
     "build": "ember build",
-    "test": "testem ci"
+    "test": "testem ci -R dot"
   }
 }
