--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
   "devDependencies": {
     "jquery": "~1.11.1",
     "handlebars": "~1.3.0",
-    "loader.js": "~1.0.0"
+    "loader.js": "stefanpenner/loader.js#1.0.1",
   },
   "ignore": [
     "dist/ember-inflector.jshint.js",
