--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "ember-inflector",
   "version": "1.1.0",
+  "keywords": [
+    "ember-addon"
+  ],  
   "devDependencies": {
     "bower": "^1.3.8",
     "broccoli": "^0.12.3",
