add tomster GH_TOKEN secure env variable

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: node_js
 sudo: false
-script: "npm run bower && npm run build && npm run test"
+script: npm run bower && npm run build && npm run test
+env:
+  global:
+    secure: DBzfaR7q4J+dRPQ/b8xRzfDXeAJUdUMKsiwTYTvrGz9n+N2Oyf91EhU11HXQ5h7V3AX6ATIF4QJ3EXjBdTAa7q7Ss+xQM3Oag/KaMjEdG3PK5pG8KNbXyFKuvKZRKm6R/6sJA924gqLECfOpvw2fHVQyZhOirKft2GLPJL62VDs=
