--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-inflector",
-  "version": "1.2.0",
+  "version": "1.3.0-canary",
   "devDependencies": {
     "bower": "^1.3.8",
     "broccoli": "^0.12.3",
