--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "broccoli-concat": "0.0.7",
     "broccoli-env": "0.0.1",
     "broccoli-es3-safe-recast": "0.0.8",
-    "broccoli-es6-module-transpiler": "^0.1.1",
+    "broccoli-es6-module-transpiler": "^0.5.0",
     "broccoli-file-mover": "^0.4.0",
     "broccoli-file-remover": "^0.2.2",
-    "broccoli-jshint": "^0.5.1",
+    "broccoli-jshint": "^0.5.3",
     "broccoli-merge-trees": "^0.1.4",
-    "broccoli-static-compiler": "^0.1.4",
+    "broccoli-static-compiler": "^0.2.1",
     "broccoli-transform": "^0.1.1",
     "broccoli-uglify-js": "^0.1.3",
     "broccoli-wrap": "0.0.2",
-    "ember-cli": "0.0.40",
+    "ember-cli": "^0.1.3",
+    "es6-module-transpiler": "^0.9.5",
+    "es6-module-transpiler-package-resolver": "^1.0.1",
     "matchdep": "^0.3.0",
     "testem": "^0.6.17"
   },
