--- a/bower.json
+++ b/bower.json
@@ -6,9 +6,8 @@
   },
   "devDependencies": {
     "jquery": "~1.11.1",
-    "handlebars": "~2.0.0",
-    "loader.js": "~1.0.0",
-    "ember": "components/ember#canary"
+    "handlebars": "~1.3.0",
+    "loader.js": "~1.0.0"
   },
   "ignore": [
     "dist/ember-inflector.jshint.js",
