--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "es6-module-transpiler": "^0.9.5",
     "es6-module-transpiler-package-resolver": "^1.0.1",
     "matchdep": "^0.3.0",
+    "rsvp": "^3.0.13",
     "testem": "^0.6.17"
   },
   "scripts": {
