--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "broccoli-uglify-js": "^0.1.3",
     "broccoli-wrap": "0.0.2",
     "ember-cli": "^0.1.3",
+    "ember-cli-htmlbars": "^0.6.0",
     "es6-module-transpiler": "^0.9.5",
     "es6-module-transpiler-package-resolver": "^1.0.1",
     "matchdep": "^0.3.0",
