Add main entry point for package.json.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "keywords": [
     "ember-addon"
   ],
+  "main": "lib/ember-addon/index.js",
   "ember-addon": {
     "configPath": "tests/dummy/config"
   }
