--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "keywords": [
     "ember-addon"
   ],
-  "main": "lib/ember-addon/index.js",
+  "main": "addon/index.js",
   "ember-addon": {
     "configPath": "tests/dummy/config"
   }
