--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build": "ember build",
     "test": "ember test"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/stefanpenner/ember-inflector.git"  
+  },
   "engines": {
     "node": ">= 0.10.0"
   },
