--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test:all": "ember try:each"
   },
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "10.* || 12.* || >= 14"
   },
   "dependencies": {
     "ember-cli-babel": "^6.6.0"
