Add release automation setup.
`npx create-rwjblue-release-it-setup`

--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
     "test:ember": "ember test",
     "test:ember-compatibility": "ember try:each"
   },
-  "engines": {
-    "node": "10.* || 12.* || >= 14"
-  },
   "dependencies": {
     "ember-cli-babel": "^7.26.5"
   },
@@ -58,13 +55,36 @@
     "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "qunit-dom": "^1.6.0"
+    "qunit-dom": "^1.6.0",
+    "release-it": "^14.2.1",
+    "release-it-lerna-changelog": "^3.1.0"
+  },
+  "engines": {
+    "node": "10.* || 12.* || >= 14"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   },
   "ember": {
     "edition": "octane"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
+  },
+  "release-it": {
+    "plugins": {
+      "release-it-lerna-changelog": {
+        "infile": "CHANGELOG.md",
+        "launchEditor": true
+      }
+    },
+    "git": {
+      "tagName": "v${version}"
+    },
+    "github": {
+      "release": true,
+      "tokenRef": "GITHUB_AUTH"
+    }
   },
   "volta": {
     "node": "15.3.0",
