--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,88 +3,87 @@ name: CI
 on:
   push:
     branches:
+      - main
       - master
-    tags:
-      - '*'
-  pull_request:
-  schedule:
-    - cron:  '0 4 * * 1' # Mondays at 4am
+  pull_request: {}
+
+concurrency:
+  group: ci-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
 
 jobs:
   test:
-    name: Tests
+    name: "Tests"
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Setup node.js
-        uses: volta-cli/action@v1
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 8
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: pnpm
+      - name: Install Dependencies
+        run: pnpm install --frozen-lockfile
       - name: Lint
-        run: yarn lint
-      - name: Test
-        run: yarn test:ember
-  test-os:
-    name: Tests (Windows & MacOs)
-    runs-on: ${{ matrix.os }}
+        run: pnpm lint
+      - name: Run Tests
+        run: pnpm test
+
+  floating:
+    name: "Floating Dependencies"
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 8
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: pnpm
+      - name: Install Dependencies
+        run: pnpm install --no-lockfile
+      - name: Run Tests
+        run: pnpm test
+
+  try-scenarios:
+    name: ${{ matrix.try-scenario }}
+    runs-on: ubuntu-latest
+    needs: 'test'
 
     strategy:
+      fail-fast: false
       matrix:
-        node: ['10', '12', '14']
-        os: [ubuntu-latest, macOS-latest, windows-latest]
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Setup node.js
-        uses: volta-cli/action@v1
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
-      - name: Lint
-        run: yarn lint
-      - name: Test
-        run: yarn test:ember
-
-
-  test-no-lock:
-    name: Floating Dependencies
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Setup node.js
-        uses: volta-cli/action@v1
-      - name: Install dependencies
-        run: yarn --no-lockfile
-      - name: Test
-        run: yarn test:ember
-
-  test-try:
-    name: Additional Tests
-    runs-on: ubuntu-latest
-    needs:
-      - test
-    strategy:
-      matrix:
-        scenario:
+        try-scenario:
           - ember-lts-3.16
           - ember-lts-3.20
+          - ember-lts-3.24
+          - ember-lts-3.28
+          - ember-lts-4.4
+          - ember-lts-4.8
+          - ember-lts-4.12
+          - ember-lts-5.4
           - ember-release
           - ember-beta
           - ember-canary
-          - ember-default-with-jquery
-          - ember-classic
-          - embroider-tests
+          - embroider-safe
+          - embroider-optimized
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Setup node.js
-        uses: volta-cli/action@v1
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
-      - name: Test
-        run: yarn ember try:one ${{ matrix.scenario }}
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 8
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: pnpm
+      - name: Install Dependencies
+        run: pnpm install --frozen-lockfile
+      - name: Run Tests
+        run: ./node_modules/.bin/ember try:one ${{ matrix.try-scenario }} --skip-cleanup
+        working-directory: test-app
