--- a/package.json
+++ b/package.json
@@ -1,93 +1,27 @@
 {
-  "name": "ember-inflector",
-  "version": "4.0.2",
-  "description": "ember-inflector goal is to be rails compatible.",
-  "keywords": [
-    "ember-addon"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/emberjs/ember-inflector.git"
-  },
+  "private": true,
+  "repository": "",
   "license": "MIT",
-  "author": "Stefan Penner, Manuel Wiedenmann and Trace Wax",
-  "directories": {
-    "doc": "doc",
-    "test": "tests"
-  },
+  "author": "",
   "scripts": {
-    "build": "ember build --environment=production",
-    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
-    "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint .",
-    "start": "ember serve",
-    "test": "npm-run-all lint:* test:*",
-    "test:ember": "ember test",
-    "test:ember-compatibility": "ember try:each"
-  },
-  "dependencies": {
-    "ember-cli-babel": "^7.26.5"
+    "build": "pnpm --filter ember-inflector build",
+    "lint": "pnpm --filter '*' lint",
+    "lint:fix": "pnpm --filter '*' lint:fix",
+    "prepare": "pnpm build",
+    "start": "concurrently 'npm:start:*' --restart-after 5000 --prefix-colors cyan,white,yellow",
+    "start:addon": "pnpm --filter ember-inflector start --no-watch.clearScreen",
+    "start:test-app": "pnpm --filter test-app start",
+    "test": "pnpm --filter '*' test",
+    "test:ember": "pnpm --filter '*' test:ember"
   },
   "devDependencies": {
-    "@ember/optional-features": "^2.0.0",
-    "@glimmer/component": "^1.0.3",
-    "@glimmer/tracking": "^1.0.3",
-    "babel-eslint": "^10.1.0",
-    "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.10.1",
-    "ember-cli": "~3.26.1",
-    "ember-cli-dependency-checker": "^3.2.0",
-    "ember-cli-htmlbars": "^5.7.1",
-    "ember-cli-inject-live-reload": "^2.1.0",
-    "ember-cli-terser": "^4.0.2",
-    "ember-disable-prototype-extensions": "^1.1.3",
-    "ember-export-application-global": "^2.0.1",
-    "ember-load-initializers": "^2.1.2",
-    "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-qunit": "^4.6.0",
-    "ember-resolver": "^8.0.2",
-    "ember-source": "~3.26.1",
-    "ember-source-channel-url": "^3.0.0",
-    "ember-template-lint": "^2.15.0",
-    "ember-try": "^1.4.0",
-    "eslint": "^7.25.0",
-    "eslint-plugin-ember": "^10.4.1",
-    "eslint-plugin-node": "^11.1.0",
-    "loader.js": "^4.7.0",
-    "npm-run-all": "^4.1.5",
-    "qunit-dom": "^1.6.0",
-    "release-it": "^14.2.1",
-    "release-it-lerna-changelog": "^3.1.0"
+    "concurrently": "^8.2.0",
+    "prettier": "^3.0.3",
+    "prettier-plugin-ember-template-tag": "^1.1.0"
   },
-  "engines": {
-    "node": "10.* || 12.* || >= 14"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org"
-  },
-  "ember": {
-    "edition": "octane"
-  },
-  "ember-addon": {
-    "configPath": "tests/dummy/config"
-  },
-  "release-it": {
-    "plugins": {
-      "release-it-lerna-changelog": {
-        "infile": "CHANGELOG.md",
-        "launchEditor": true
-      }
-    },
-    "git": {
-      "tagName": "v${version}"
-    },
-    "github": {
-      "release": true,
-      "tokenRef": "GITHUB_AUTH"
+  "pnpm": {
+    "overrides": {
+      "@types/eslint": "^7.0.0"
     }
-  },
-  "volta": {
-    "node": "15.3.0",
-    "yarn": "1.22.10"
   }
 }
