--- a/ember-inflector/package.json
+++ b/ember-inflector/package.json
@@ -50,6 +50,8 @@
     "eslint-plugin-ember": "^11.12.0",
     "eslint-plugin-n": "^16.4.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "lint-to-the-future": "^2.0.0",
+    "lint-to-the-future-eslint": "^2.0.1",
     "prettier": "^3.1.1",
     "prettier-plugin-ember-template-tag": "^1.1.0",
     "rollup": "^4.9.1",
