--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@babel/eslint-parser": "^7.21.3",
     "@babel/plugin-proposal-decorators": "^7.21.0",
     "@ember/optional-features": "^2.0.0",
-    "@ember/string": "^3.0.1",
+    "@ember/string": "^4.0.0",
     "@ember/test-helpers": "^2.9.3",
     "@embroider/test-setup": "^3.0.0",
     "@glimmer/component": "^1.1.2",
@@ -76,6 +76,7 @@
     "webpack": "^5.78.0"
   },
   "peerDependencies": {
+    "@ember/string": "^3.1.1 || ^4.0.0",
     "ember-source": "^3.16.0 || ^4.0.0 || ^5.0.0"
   },
   "engines": {
