--- a/ember-inflector/package.json
+++ b/ember-inflector/package.json
@@ -49,6 +49,8 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^17.3.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "lint-to-the-future": "^2.0.0",
+    "lint-to-the-future-eslint": "^2.0.1",
     "prettier": "^3.2.5",
     "prettier-plugin-ember-template-tag": "^2.0.2",
     "rollup": "^4.16.4",
